# ufc-ai

./: .gitignore  Cargo.toml  readme.md
src/: lib.rs  main.rs  puzzle.rs
src/ai/: depth_search.rs  functions.rs  mod.rs  node.rs  search.rs  strategy.rs  util.rs
src/ai/clustering/: kmeans.rs  knn.rs  mod.rs  ops.rs
src/ai/data/: mod.rs  node.rs
src/ai/genetic/: evolve.rs  mod.rs
src/ai/genetic/selector/: mod.rs  tournament.rs
src/ai/gradient/: mod.rs  optimize.rs  regularizations.rs
src/ai/gradient/gradients/: linear.rs  lineargradient.rs  mod.rs
src/ai/leastsquares/: algorithm.rs
src/ai/neuralnet/: layer.rs  mod.rs  ndarray.rs  shapesize.rs
src/ai/neuralnet/activations/: activation.rs  mod.rs  relu.rs
src/ai/neuralnet/layers/: dense.rs  mod.rs
src/ai/search/: algorithm.rs  mod.rs  search.rs
src/ai/search/data/: state.rs
src/ai/search/strategies/: astar.rs  fifo.rs  greedy.rs  (+3 more)
src/ai/utilities/: encodelabels.rs  findclasses.rs  loaddata.rs  mod.rs  ordkeypair.rs  splitatratio.rs  writedata.rs
src/demo/: mod.rs  playground.rs
src/demo/clustering/: demo.rs  kmeansdemo.rs  knndemo.rs  mod.rs  util.rs
src/demo/genetic/: demo.rs  functions.rs  mod.rs
src/demo/gradient/: consts.rs  csvtest.rs  demo.rs  demo1.rs  demo2.rs  demo2ls.rs  demo3.rs  mod.rs  plotterstest.rs
src/demo/puzzle/: demo.rs  functions.rs  mod.rs  movement.rs  state.rs
src/demo/regression/: demo1.rs  demo2.rs  demo2ls.rs  demo3.rs  demo3ls.rs  mod.rs  util.rs
src/puzzle/: functions.rs  mod.rs  state.rs
tools/: epochgraph.py  msexepochgraph.py  requirements.txt
(+5 files in other folders)
