[package]
name = "ufc-ai"
version = "0.2.3"
edition = "2018"

[lib]
name = "ufc_ai"
path = "src/lib.rs"

[[bin]]
name = "ufc_ai_bin"
path = "src/bin/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "1.2.0"
ordered-float = "2.8.0"
rand = "0.8.4"