[package]
name = "ufc-ai"
version = "0.3.0"
edition = "2018"

[lib]
name = "ufc_ai"
path = "src/lib.rs"

[[bin]]
name = "ufc_ai_bin"
path = "src/bin/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "^1.2.0"
ordered-float = "^2.8.0"
rand = "^0.8.4"
plotters = "^0.3.1"
csv = "^1.1.6"
serde = { version = "^1.0.132", features = ["derive"] }
nalgebra = "0.30.0"
