[package]
name = "ufc-ai"
version = "0.4.0"
edition = "2021"

[lib]
name = "ufc_ai"
path = "src/lib.rs"

[[bin]]
name = "ufc_ai_bin"
path = "src/bin/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "^1.2.0"
ordered-float = "^2.8.0"
rand = "^0.8.4"
csv = "^1.1.6"
serde = { version = "^1.0.132", features = ["derive"] }
nalgebra = "0.30.0"
